2nd training/Community/Community/Community1/force-app/main/default/objects/BASIC_KNOWLEDGE__c/BASIC_KNOWLEDGE__c.object-meta.xml
<CustomObject>
    <description>BASIC KNOWLEDGE</description>
    <label>BASIC KNOWLEDGE</label>
    <nameField>
        <label>BASIC KNOWLEDGE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BASIC KNOWLEDGES</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>