2nd training/Community/Community/Community1/force-app/main/default/objects/BASIC_KNOWLEDGE__c/fields/BASIC_KNOWLEDGE_ID__c.field-meta.xml
<CustomField>
    <fullName>BASIC_KNOWLEDGE_ID__c</fullName>
    <description>BASIC KNOWLEDGE_ID</description>
    <displayFormat>BK-{0000}</displayFormat>
    <inlineHelpText>BASIC KNOWLEDGE_ID</inlineHelpText>
    <label>BASIC KNOWLEDGE_ID</label>
    <type>AutoNumber</type>
</CustomField>