2nd training/Community/Community/Community1/force-app/main/default/objects/BASIC_KNOWLEDGE__c/fields/Comment_from_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Comment_from_Supervisor__c</fullName>
    <description>Comment from Supervisor</description>
    <inlineHelpText>Comment from Supervisor</inlineHelpText>
    <label>Comment from Supervisor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>