2nd training/Community/Community/Community1/force-app/main/default/objects/BASIC_KNOWLEDGE__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee Name</description>
    <inlineHelpText>Employee Name</inlineHelpText>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>BASIC KNOWLEDGES</relationshipLabel>
    <relationshipName>BASIC_KNOWLEDGES</relationshipName>
    <type>Lookup</type>
</CustomField>