2nd training/Community/Community/Community1/force-app/main/default/objects/BASIC_KNOWLEDGE__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <description>Skill Name</description>
    <inlineHelpText>Skill Name</inlineHelpText>
    <label>Skill Name</label>
    <referenceTo>ProfileSkill</referenceTo>
    <relationshipLabel>BASIC KNOWLEDGES</relationshipLabel>
    <relationshipName>BASIC_KNOWLEDGES</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>